srcMyCoreApp/main/default/objects/Account/fields/COE__c.field-meta.xml
<CustomField>
    <fullName>COE__c</fullName>
    <label>COE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>