srcMyCoreApp/main/default/objects/Account/fields/CPCheck1__c.field-meta.xml
<CustomField>
    <fullName>CPCheck1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPCheck1</label>
    <type>Checkbox</type>
</CustomField>