srcMyCoreApp/main/default/objects/Account/recordTypes/Sales_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Sales_Record_Type</fullName>
    <active>true</active>
    <label>Sales Record Type</label>
</RecordType>